# TestWorkURLShorten

./: .gitignore  README.md  pyproject.toml
src/: database.py  main.py
src/cruds/: links.py
src/routers/: links.py
src/schemas/: links.py
src/services/: shortener.py
tests/: conftest.py  test_shortener.py
